--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "nyc": "^6.4.4",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
