--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "ava": "^0.15.1",
+    "axios": "^0.12.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
@@ -32,7 +33,10 @@
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "moment": "^2.13.0",
+    "normalize.css": "^4.1.1",
     "nyc": "^6.4.4",
+    "postcss-css-variables": "^0.5.1",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
